--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.spotify</groupId>
   <artifactId>bigtable-client</artifactId>
-  <version>0.0.1-alpha</version>
+  <version>0.0.1-beta-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>bigtable-client</name>
   <description>A wrapper around the Bigtable RPC client</description>
