--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
   <groupId>com.spotify</groupId>
   <artifactId>bigtable-client</artifactId>
-  <version>0.1.0-beta-SNAPSHOT</version>
+  <version>0.1.0-beta1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>bigtable-client</name>
   <description>A wrapper around the Bigtable RPC client</description>
 
   <properties>
-    <projectId.build.sourceEncoding>UTF-8</projectId.build.sourceEncoding>
-    <projectId.reporting.outputEncoding>UTF-8</projectId.reporting.outputEncoding>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <netty.version>4.1.0.CR1</netty.version>
   </properties>
 
@@ -106,14 +106,39 @@
     <!-- BigTable needs this version of Netty included to connect include linux and osx base 64 versions-->
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative</artifactId>
-      <version>1.1.33.Fork15</version>
+      <artifactId>netty-all</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-transport</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-common</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-handler</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>1.1.33.Fork13</version>
       <classifier>linux-x86_64</classifier>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative</artifactId>
-      <version>1.1.33.Fork15</version>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>1.1.33.Fork13</version>
       <classifier>osx-x86_64</classifier>
     </dependency>
 
