--- a/pom.xml
+++ b/pom.xml
@@ -131,13 +131,13 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <artifactId>netty-tcnative</artifactId>
       <version>1.1.33.Fork13</version>
       <classifier>linux-x86_64</classifier>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <artifactId>netty-tcnative</artifactId>
       <version>1.1.33.Fork13</version>
       <classifier>osx-x86_64</classifier>
     </dependency>
