--- a/pom.xml
+++ b/pom.xml
@@ -119,15 +119,8 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative</artifactId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
       <version>1.1.33.Fork18</version>
-      <classifier>linux-x86_64</classifier>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative</artifactId>
-      <version>1.1.33.Fork18</version>
-      <classifier>osx-x86_64</classifier>
     </dependency>
 
     <!-- Test Dependencies -->
