--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <netty.version>4.1.3.Final</netty.version>
+    <netty.version>4.1.1.Final</netty.version>
   </properties>
 
   <parent>
@@ -72,7 +72,7 @@
     <dependency>
       <groupId>com.google.cloud.bigtable</groupId>
       <artifactId>bigtable-client-core</artifactId>
-      <version>0.9.3</version>
+      <version>0.9.4-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.code.findbugs</groupId>
