--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>simple-bigtable</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0-beta14</version>
   <packaging>jar</packaging>
   <name>simple-bigtable</name>
   <description>A wrapper around the Bigtable RPC client</description>
