--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>6</version>
   </parent>
 
-  <artifactId>simple-bigtable</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <artifactId>inferno-simple-bigtable</artifactId>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>simple-bigtable</name>
   <description>A wrapper around the Bigtable RPC client</description>
