--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>6</version>
   </parent>
 
-  <artifactId>inferno-simple-bigtable</artifactId>
+  <artifactId>simple-bigtable</artifactId>
   <version>0.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>simple-bigtable</name>
