--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>simple-bigtable</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>simple-bigtable</name>
   <description>A wrapper around the Bigtable RPC client</description>
@@ -38,9 +38,9 @@
 
   <developers>
     <developer>
-      <id>rgruener</id>
-      <name>Robert Gruener</name>
-      <email>robertg@spotify.com</email>
+      <id>keithmcneill</id>
+      <name>Keith McNeill</name>
+      <email>kdm@spotify.com</email>
       <organization>Spotify AB</organization>
       <organizationUrl>http://www.spotify.com</organizationUrl>
       <roles>
