--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,15 @@ language: java
 jdk:
   - oraclejdk8
 
+branches:
+  only:
+  - master
+
+# Skipping the install step as the script step will do all we need.
+install: true
+
 script:
-  - mvn verify
+  # Run on pull requests (encrypted data not available for pull requests)
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then mvn verify; fi'
+  # Run on merges to master
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then mvn deploy; fi'
