--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
   </parent>
 
   <artifactId>simple-bigtable</artifactId>
-  <version>0.2.0</version>
+  <version>0.3.0</version>
   <packaging>jar</packaging>
   <name>simple-bigtable</name>
   <description>A wrapper around the Bigtable RPC client</description>
   <url>https://github.com/spotify/simple-bigtable</url>
 
   <properties>
-    <netty.version>4.1.8.Final</netty.version>
+    <netty.version>4.1.17.Final</netty.version>
   </properties>
 
   <licenses>
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>com.google.cloud.bigtable</groupId>
       <artifactId>bigtable-client-core</artifactId>
-      <version>0.9.7.1</version>
+      <version>1.3.0</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.code.findbugs</groupId>
@@ -87,17 +87,17 @@
     <dependency>
       <groupId>com.google.http-client</groupId>
       <artifactId>google-http-client-jackson2</artifactId>
-      <version>1.22.0</version>
+      <version>1.23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.errorprone</groupId>
       <artifactId>error_prone_annotations</artifactId>
-      <version>2.0.19</version>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
       <artifactId>grpc-context</artifactId>
-      <version>1.3.0</version>
+      <version>1.10.0</version>
     </dependency>
     <!-- BigTable needs this version of Netty included to connect include linux and osx base 64 versions-->
     <dependency>
@@ -128,7 +128,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <version>1.1.33.Fork26</version>
+      <version>2.0.7.Final</version>
     </dependency>
 
     <!-- Test Dependencies -->
